[gd_scene load_steps=8 format=3 uid="uid://b3pv5eaerjwks"]

[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/styles/UIPanelBase.tres" id="1_dekgj"]
[ext_resource type="StyleBox" uid="uid://csle20exwqtti" path="res://assets/styles/PanelMenuBar.tres" id="2_ftw54"]
[ext_resource type="Script" uid="uid://ck1cwcj8lktak" path="res://components/TO_BE_SORTED/InputTriggerSettings/InputTriggerSettings.gd" id="2_tc8uv"]
[ext_resource type="Texture2D" uid="uid://bbennjke0ioen" path="res://assets/icons/Add.svg" id="3_tc8uv"]
[ext_resource type="Texture2D" uid="uid://dfrrs2dnvlvsu" path="res://assets/icons/Delete.svg" id="4_h3cm7"]
[ext_resource type="PackedScene" uid="uid://bwj2kgbjtdg17" path="res://components/ClientComponentSettings/ClientComponentSettings.tscn" id="5_bkntp"]

[sub_resource type="ButtonGroup" id="ButtonGroup_1vksa"]

[node name="InputTriggerSettings" type="PanelContainer" node_paths=PackedStringArray("_input_action_settings", "_input_trigger_settings", "_action_trigger_settings", "_input_triggers_tree", "_action_triggers_tree", "_new_input_trigger_button", "_new_action_trigger_button", "_remove_input_trigger_button", "_remove_action_trigger_button", "_tab_button_settings", "_tab_button_inputs", "_tab_button_actions")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_dekgj")
script = ExtResource("2_tc8uv")
_input_action_settings = NodePath("VBoxContainer/Settings/InputActionSettings")
_input_trigger_settings = NodePath("VBoxContainer/InputTriggers/HBoxContainer/InputTriggerSettings")
_action_trigger_settings = NodePath("VBoxContainer/ActionTriggers/HBoxContainer/ActionTriggerSettings")
_input_triggers_tree = NodePath("VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer/InputTriggerList")
_action_triggers_tree = NodePath("VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer/ActionTriggers")
_new_input_trigger_button = NodePath("VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/NewInputTrigger")
_new_action_trigger_button = NodePath("VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/NewActionTrigger")
_remove_input_trigger_button = NodePath("VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/DeleteInputTrigger")
_remove_action_trigger_button = NodePath("VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/DeleteActionTrigger")
_tab_button_settings = NodePath("VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/Settings")
_tab_button_inputs = NodePath("VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/InputTriggers")
_tab_button_actions = NodePath("VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/ActionTriggers")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_ftw54")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Settings" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
disabled = true
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_1vksa")
text = "Settings"

[node name="InputTriggers" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_1vksa")
text = "Input Triggers"

[node name="ActionTriggers" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_1vksa")
text = "Action Triggers"

[node name="Settings" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InputActionSettings" parent="VBoxContainer/Settings" instance=ExtResource("5_bkntp")]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputTriggers" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InputTriggers"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/InputTriggers/HBoxContainer"]
layout_mode = 2

[node name="InputTriggerList" type="Tree" parent="VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="NewInputTrigger" type="OptionButton" parent="VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "New Item"
popup/item_0/icon = ExtResource("3_tc8uv")
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true

[node name="DeleteInputTrigger" type="Button" parent="VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
disabled = true
text = "Delete"
icon = ExtResource("4_h3cm7")

[node name="InputTriggerSettings" parent="VBoxContainer/InputTriggers/HBoxContainer" instance=ExtResource("5_bkntp")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionTriggers" type="PanelContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ActionTriggers"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ActionTriggers/HBoxContainer"]
layout_mode = 2

[node name="ActionTriggers" type="Tree" parent="VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="NewActionTrigger" type="OptionButton" parent="VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 1
popup/item_0/text = "New Item"
popup/item_0/icon = ExtResource("3_tc8uv")
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true

[node name="DeleteActionTrigger" type="Button" parent="VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
disabled = true
text = "Delete"
icon = ExtResource("4_h3cm7")

[node name="ActionTriggerSettings" parent="VBoxContainer/ActionTriggers/HBoxContainer" instance=ExtResource("5_bkntp")]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/Settings" to="VBoxContainer/Settings" method="set_visible"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/InputTriggers" to="VBoxContainer/InputTriggers" method="set_visible"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/ActionTriggers" to="VBoxContainer/ActionTriggers" method="set_visible"]
[connection signal="item_selected" from="VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer/InputTriggerList" to="." method="_on_input_trigger_list_item_selected"]
[connection signal="item_selected" from="VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/NewInputTrigger" to="." method="_on_new_input_trigger_item_selected"]
[connection signal="pressed" from="VBoxContainer/InputTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/DeleteInputTrigger" to="." method="_on_delete_input_trigger_pressed"]
[connection signal="item_selected" from="VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer/ActionTriggers" to="." method="_on_action_triggers_item_selected"]
[connection signal="item_selected" from="VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/NewActionTrigger" to="." method="_on_new_action_trigger_item_selected"]
[connection signal="pressed" from="VBoxContainer/ActionTriggers/HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer/DeleteActionTrigger" to="." method="_on_delete_action_trigger_pressed"]
